@@ -20,12 +20,13 @@
 #ifndef		__UTILS_H__
 #define		__UTILS_H__
 
-#include <string>
-
 #define _SECOND ((int64) 10000000)
 #define _MINUTE (60 * _SECOND)
 #define _HOUR   (60 * _MINUTE)
 #define _DAY    (24 * _HOUR)
+
+#include <string>
+#include "ProcInOut.h"
 
 //
 // PURPOSE : BBWin utils functions
